Bootstrap-Basic Theme

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -15,16 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body>
-    <!--Shared Header-->
-    <header class="w-100 bg-off-white ">
-        <div class="container d-block d-md-flex justify-content-between align-items-center p-md-4 p-3 py-4">
-            <h4 class="mono fst-italic w-100 my-3 my-md-0">
-                Corvette &mdash; Autoindex Directory Listing
-            </h4>
-        </div>
-    </header>
-
+<body class="bg-light">
     {% block content %}
     {% endblock %}
 
