--- a/corvette/theme/templates/corvette.html
+++ b/corvette/theme/templates/corvette.html
@@ -2,12 +2,12 @@
 
 {% block content %}
 <div class="container-md font-monospace">
-
-    <h1>Corvette &mdash; Autoindex Directory Listing
+    <br>
+    <h1><a href="https://github.com/philipkiely/corvette">Corvette</a> &mdash; Autoindex Directory Listing
     <br>
     <br>
     <ul class="list-inline fs-3 fw-bold">
-        <a href="/">Autoindex</a>
+        <a href="{{ root_link }}">{{ root_name }}</a>
         <li class="list-inline-item">/</li>
         {% for b in breadcrumbs %}
             <li class="list-inline-item"><a href="/{{ b[1] }}">{{ b[0] }}</a></li>
